--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 			"jakarta.activation:jakarta.activation-api",
 			"com.querydsl:querydsl-apt:5.0.0:jakarta"
 	)
+
+	//
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 tasks.named('test') {
